--- a/Modules/Setup.dist
+++ b/Modules/Setup.dist
@@ -231,7 +231,7 @@ crypt cryptmodule.c # -lcrypt	# crypt(3); needs -lcrypt on some systems
 # Some more UNIX dependent modules -- off by default, since these
 # are not supported by all UNIX systems:
 
-nis nismodule.c -lnsl -ltirpc -I/usr/include/tirpc -I/usr/include/nsl -L/usr/lib/nsl
+nis nismodule.c -lnsl -ltirpc -I/usr/include/tirpc -I/usr/include/nsl -L/usr/lib64/nsl
 termios termios.c	# Steen Lumholt's termios module
 resource resource.c	# Jeremy Hylton's rlimit interface
 
@@ -416,7 +416,7 @@ gdbm gdbmmodule.c -lgdbm
 # Edit the variables DB and DBLIBVERto point to the db top directory
 # and the subdirectory of PORT where you built it.
 DBINC=/usr/include/libdb
-DBLIB=/usr/lib
+DBLIB=/usr/lib64
 _bsddb _bsddb.c -I$(DBINC) -L$(DBLIB) -ldb
 
 # Historical Berkeley DB 1.85
@@ -462,7 +462,7 @@ cPickle cPickle.c
 # Andrew Kuchling's zlib module.
 # This require zlib 1.1.3 (or later).
 # See http://www.gzip.org/zlib/
-zlib zlibmodule.c -I$(prefix)/include -L$(exec_prefix)/lib -lz
+zlib zlibmodule.c -I$(prefix)/include -L$(exec_prefix)/lib64 -lz
 
 # Interface to the Expat XML parser
 # More information on Expat can be found at www.libexpat.org.
