00144-no-gdbm.patch
00144 #
(Optionally) disable the gdbm module:

--- a/Modules/Setup.dist
+++ b/Modules/Setup.dist
@@ -400,7 +400,7 @@ dl dlmodule.c
 #
 # First, look at Setup.config; configure may have set this for you.
 
-gdbm gdbmmodule.c -lgdbm
+# gdbm gdbmmodule.c -lgdbm
 
 
 # Sleepycat Berkeley DB interface.
